--- a/VulcanForWindows/ExamsPage.xaml
+++ b/VulcanForWindows/ExamsPage.xaml
@@ -10,6 +10,8 @@
     mc:Ignorable="d">
     <Page.Resources>
         <converters:DateTimeConverter x:Key="DateTimeConverter" />
+        <converters:BoolToColor x:Key="BoolToColor" />
+        <converters:BoolToStrings x:Key="BoolToStrings" />
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -43,15 +45,31 @@
                                                 <Grid
                             Padding="13,10,13,10" Margin="0">
                                                     <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="*"/>
+                                                        <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="*"/>
                                                     </Grid.ColumnDefinitions>
                                                     <StackPanel VerticalAlignment="Center">
-                                                        <TextBlock Text="{x:Bind Content}"/>
+                                                        <TextBlock Text="{x:Bind Content}" 
+                                                                   Foreground="{x:Bind IsInPast, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White}"
+                                                                   FontWeight="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=Normal!SemiBold}"
+                                                                   TextDecorations="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=Strikethrough!None}"
+                                                                   />
 
-                                                        <TextBlock Text="{x:Bind Subject.Name}"/>
+                                                        <TextBlock
+                                                                    Foreground="{x:Bind IsInPast, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!LightGray}"
+                                                                   FontWeight="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=SemiLight!Normal}"
+                                                                   TextDecorations="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=Strikethrough!None}"
+                                                                   >
+                                                            <Run Text="{x:Bind Subject.Name}"/>
+                                                            <Run Text="-"/>
+                                                            <Run Text="{x:Bind Type}"/>
+                                                        </TextBlock>
                                                     </StackPanel>
-                                                    <TextBlock Text="{x:Bind Deadline, Converter={StaticResource DateTimeConverter}, ConverterParameter=WeekdayDate}" Grid.Column="1" HorizontalAlignment="Right"/>
+                                                    <TextBlock Text="{x:Bind Deadline, Converter={StaticResource DateTimeConverter}, ConverterParameter=WeekdayDate}" Grid.Column="1" HorizontalAlignment="Right"
+                                                                Foreground="{x:Bind IsInPast, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White}"
+                                                                   FontWeight="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=Normal!SemiBold}"
+                                                                   TextDecorations="{x:Bind IsInPast, Converter={StaticResource BoolToStrings}, ConverterParameter=Strikethrough!None}"
+                                                                   />
                                                 </Grid>
                                             </ItemContainer>
                                         </DataTemplate>
@@ -60,7 +78,7 @@
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                    
+
                 </ListView>
             </ListViewItem>
             <ListViewItem Padding="0">
