--- a/VulcanForWindows/UserControls/Messages/SingleMessageBig.xaml
+++ b/VulcanForWindows/UserControls/Messages/SingleMessageBig.xaml
@@ -13,6 +13,8 @@
     <UserControl.Resources>
         <converts:VisibilityConverter x:Key="VisibilityConverter"/>
         <converts:DateTimeConverter x:Key="DateTimeConverter"/>
+        <converts:BoolToColor x:Key="BoolToColor"/>
+        <converts:BoolToStrings x:Key="BoolToStrings"/>
     </UserControl.Resources>
 
     <Button Click="Clicked" Padding="15" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
@@ -26,9 +28,9 @@
             <CheckBox IsChecked="{x:Bind Message.IsSelected, Mode=TwoWay}" VerticalAlignment="Center"/>
             <TextBlock Text="{x:Bind Message.message.Sender.Name, Mode=OneWay}"
                                TextWrapping="NoWrap" TextTrimming="CharacterEllipsis"
-                               FontWeight="Medium" FontSize="16" VerticalAlignment="Center" Grid.Column="1" Padding="0,0,25,0"
+                               FontSize="16" VerticalAlignment="Center" Grid.Column="1" Padding="0,0,25,0"
                            ToolTipService.ToolTip="{x:Bind Message.message.Sender.Name, Mode=OneWay}"
-                           Foreground="{x:Bind Message.DisplayColor, Mode=OneWay}"/>
+                           Foreground="{x:Bind Message.IsRead, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White, Mode=OneWay}" FontWeight="{x:Bind Message.IsRead, Converter={StaticResource BoolToStrings}, ConverterParameter=SemiBold!Medium, Mode=OneWay}"/>
             <Grid Grid.Column="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -37,14 +39,14 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{x:Bind Message.message.Subject, Mode=OneWay}" 
-                           VerticalAlignment="Center" FontWeight="Bold" 
+                           VerticalAlignment="Center"
                            ToolTipService.ToolTip="{x:Bind Message.message.Subject, Mode=OneWay}"
-                           Foreground="{x:Bind Message.DisplayColor, Mode=OneWay}"/>
+                           Foreground="{x:Bind Message.IsRead, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White, Mode=OneWay}" FontWeight="{x:Bind Message.IsRead, Converter={StaticResource BoolToStrings}, ConverterParameter=SemiBold!Bold, Mode=OneWay}"/>
                 <TextBlock Text="|" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1"/>
                 <TextBlock Text="{x:Bind Message.PlainContent, Mode=OneWay}" 
                                    VerticalAlignment="Center" Grid.Column="2"
                                    TextTrimming="CharacterEllipsis"
-                           Foreground="{x:Bind Message.DisplayColor, Mode=OneWay}" HorizontalAlignment="Stretch"/>
+                           Foreground="{x:Bind Message.IsRead, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White, Mode=OneWay}" FontWeight="{x:Bind Message.IsRead, Converter={StaticResource BoolToStrings}, ConverterParameter=Normal!SemiBold, Mode=OneWay}" HorizontalAlignment="Stretch"/>
 
             </Grid>
             <StackPanel Orientation="Horizontal" Grid.Column="3" Padding="10,0,0,0" Spacing="5">
@@ -54,7 +56,7 @@
                            HorizontalAlignment="Right" VerticalAlignment="Center"
                                        Visibility="{x:Bind Message.Hover, Mode=OneWay, 
                     Converter={StaticResource VisibilityConverter},ConverterParameter=True}"
-                           Foreground="{x:Bind Message.DisplayColor, Mode=OneWay}"/>
+                           Foreground="{x:Bind Message.IsRead, Converter={StaticResource BoolToColor}, ConverterParameter=Silver!White, Mode=OneWay}" FontWeight="{x:Bind Message.IsRead, Converter={StaticResource BoolToStrings}, ConverterParameter=Normal!SemiBold, Mode=OneWay}"/>
                 <Button HorizontalAlignment="Right" VerticalAlignment="Center"
                                        Visibility="{x:Bind Message.Hover, Mode=OneWay, 
                                     Converter={StaticResource VisibilityConverter},ConverterParameter=False}"
